# MiniaudioCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
MiniaudioCpp/: CMakeLists.txt  premake5.lua
MiniaudioCpp/include/MiniaudioCpp/: CResource.h  C_ResourceHandling.h  Core.h  ErrorReporting.h  MiniaudioWrappers.h  NodeTraits.h  StreamReader.h  VFS.h
MiniaudioCpp/src/MiniAudioInterface/: ErrorReporting.cpp  JPLStreamReader.h  MiniaudioWrappers.cpp
MiniaudioCppTests/: CMakeLists.txt  premake5.lua
MiniaudioCppTests/src/: main.cpp
MiniaudioCppTests/src/Tests/: MiniaudioWrappersTest.cpp  MiniaudioWrappersTest.h  NodeTraitsTest.cpp  NodeTraitsTest.h
